--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body class="text-center">
-  <form class='signin' action="/home.html">
+  <form class='signin' action="home.html">
     <h2>Iniciar sesión</h2><br>
 
     <label for="nombreUsuario"><b>Nombre de usuario</b></label>
