--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
   <!-- <script src="js/init.js"></script> -->
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/login.js"></script>
 </body>
 
