--- a/product-info.html
+++ b/product-info.html
@@ -27,12 +27,32 @@
     </div>
   </nav>
   <main role="main" class="container">
-    <div id="product-info" class="container mt-5"></div>
+    <div id="product-info-e-imagenes" class="container">
+      <div id="product-info" class="container mt-5"></div>
+      <div id="product-images" class="row mt-5">
+        <div id="carouselExampleIndicators" class="carousel">
+          <ol class="carousel-indicators" id="indicadores">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          </ol>
+          <div class="carousel-inner" id="carousel-container">
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+
     <div id="product-review" class="container mt-5"></div>
     <div id="comment-form" class="container">
       <hr class="my-3">
       <form>
-        <h3>Deja tu comentario sobre el producto</h3><br>
+        <h3>Deja tu opinión sobre el producto</h3><br>
         <label for="comentario"><em>Escribe aquí tu comentario:</em><br>
           <textarea name="comentario" id="text-area" rows="4" cols="60"
             class="shadow-sm p-3 bg-white rounded"></textarea>
@@ -71,7 +91,7 @@
       <div></div>
     </div>
   </div>
-  <script src="js/jquery-3.4.1.min.js"></script>
+  <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
