--- a/products.html
+++ b/products.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row">
         <div class="buscador-div">
-          <input type="search" class="form-control" id="buscador-prod" placeholder="Buscar">
+
         </div>
         <div class="col text-right">
           <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
@@ -53,8 +53,11 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-md-6"></div>
-        <div class="col-md-6 col-sm-12 mb-1 container">
+        <div class="col-sm-2 col-md-4 col-lg-4">
+          <input type="search" class="form-control input-buscador" id="buscador-prod" placeholder="Buscar">
+        </div>
+        <div class="col-md-4 col-sm-0 col-lg-2"></div>
+        <div class="col-md-4 col-sm-8 col-lg-6 mb-1 container">
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Precio</p>
