--- a/categories.html
+++ b/categories.html
@@ -32,9 +32,6 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="buscador-div">
-          <input type="search" class="form-control" id="buscador-cat" placeholder="Buscar">
-        </div>
         <div class="col text-right">
           <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
             <label class="btn btn-light active" id="sortAsc">
@@ -50,8 +47,12 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-md-6"></div>
-        <div class="col-md-6 col-sm-12 mb-1 container">
+        <div class="col-md-4 col-sm-4 col-lg-4">
+          <input type="search" name="buscador-categoria" class="form-control input-buscador" id="buscador-cat"
+            placeholder="Buscar">
+        </div>
+        <div class="col-md-4 col-sm-0 col-lg-2"></div>
+        <div class="col-md-4 col-sm-8 col-lg-6 mb-1 container">
           <div class="row container p-0 m-0">
             <div class="col">
               <p class="font-weight-normal text-right my-2">Cant.</p>
