--- a/products.html
+++ b/products.html
@@ -77,9 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="list-group" id="products-container">
-        </div>
+      <div class="container list-group" id="products-container">
       </div>
     </div>
   </main>
