--- a/my-profile.html
+++ b/my-profile.html
@@ -44,19 +44,42 @@
     </div>
   </nav>
   <main role="main" class="px-5">
-    <div class="py-5">
-      <label for="nombre" class="ml-2">Nombre</label>
-      <input type="text" class="my-3 ml-2" name="nombre" id="nombreUsuario">
-      <label for="apellido" class="ml-2">Apellido</label>
-      <input type="text" class="my-3 ml-2" name="apellido" id="apellidoUsuario"><br>
-      <label for ="edad" class="ml-2">Edad</label>
-      <input type="number" class="my-3 ml-2" name="edad" id="edad" min="1">
-      <label for="email" class="ml-2">E-mail</label>
-      <input type="email" class="my-3 ml-2" name="email" id="eMail">
-      <label for="tel" class="ml-2">Teléfono</label>
-      <input type="tel" class="my-3 ml-2" name="tel" id="tel" max="099999999"><br>
-      <input type="button" class="my-3 ml-2" onclick="guardarUserData()" value="Guardar cambios">
+    <div class="container text-center p-4">
+      <h2>Mi perfil</h2>
     </div>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <figure>
+          <img id="profile-picture" src="" height="200"><br>
+          <input type="file" id="subir-imagen" onchange="mostrarImagen()">
+        </figure>
+      </div>
+      <div class="container py-5">
+        <div class="row justify-content-center">
+          <div class="flex-column">
+            <label for="nombre" class="ml-2"><strong>Nombre</strong></label>
+            <input type="text" class="my-3 ml-2" name="nombre" id="nombreUsuario">
+          </div>
+          <div class="flex-column">
+            <label for="apellido" class="ml-2"><strong>Apellido</strong></label>
+            <input type="text" class="my-3 ml-2" name="apellido" id="apellidoUsuario">
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="flex-column">
+            <label for="edad" class="ml-2"><strong>Edad</strong></label>
+            <input type="number" class="my-3 ml-2" name="edad" id="edad" min="1">
+            <label for="email" class="ml-2"><strong>E-mail</strong></label>
+            <input type="email" class="my-3 ml-2" name="email" id="eMail">
+            <label for="tel" class="ml-2"><strong>Teléfono</strong></label>
+          </div>
+          <input type="tel" class="my-3 ml-2" name="tel" id="tel" max="099999999">
+        </div>
+        <div class="row justify-content-center">
+          <input type="button" class="my-3 ml-2" id="guardar-cambios" onclick="guardarUserData()"
+            value="Guardar cambios">
+        </div>
+      </div>
   </main>
   <footer class="text-muted bg-light">
     <div class="container">
