--- a/products.html
+++ b/products.html
@@ -77,7 +77,9 @@
           </div>
         </div>
       </div>
-      <div class="container list-group" id="products-container">
+      <div class="container">
+        <div class="row py-3" id="products-container">
+        </div>
       </div>
     </div>
   </main>
