--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
+  <meta name="google-signin-scope" content="profile email">
+  <meta name="google-signin-client_id" content="513720773540-4dl9enrrrta60tft4vrb3b75shn5bjq9.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <title>eMercado - Todo lo que busques está aquí</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
@@ -57,8 +60,8 @@
     <input type="button" id="botonEntrar" onclick="login()" value='Entrar'>
     <p class="psw"><a href="#">Olvidó su contraseña?</a></p>
   </form>
-  
 
+  <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
   <!-- <script src="js/init.js"></script> -->
