--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 <body class="text-center">
   <form class="signin col justify-content-center">
     <h2>Iniciar sesión</h2><br>
-
-    <label for="nombre"><b>Nombre de usuario</b></label>
-    <input type="text" id='nombreUsuario' name="nombre" required>
-    <br>
-    <label for="pass"><b>Contraseña</b></label>
-    <input type="password" id='passUsuario' name="pass" required>
-    <br>
+    <fieldset>
+      <label for="nombre"><b>Nombre de usuario</b></label>
+      <input type="text" id='nombreUsuario' name="nombre" required>
+      <br>
+      <label for="pass"><b>Contraseña</b></label>
+      <input type="password" id='passUsuario' name="pass" required>
+      <br>
+    </fieldset>
     <label>
       <input type="checkbox" checked="checked" name="remember"> Recordarme
     </label>
