--- a/category-info.html
+++ b/category-info.html
@@ -21,15 +21,7 @@
 
 <body>
   <header>
-    <nav class="site-header sticky-top py-1 bg-dark">
-      <div class="container d-flex flex-column flex-md-row justify-content-between" id="nav">
-        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
-      </div>
-    </nav>
+    <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light site-header sticky-top py-1 bg-dark"></nav>
   </header>
   <main role="main">
     <section class="container mt-5">
