--- a/products.html
+++ b/products.html
@@ -21,15 +21,7 @@
 
 <body>
   <header>
-    <nav class="site-header sticky-top py-1 bg-dark">
-      <div class="container d-flex flex-column flex-md-row justify-content-between" id="nav">
-        <a class="py-2 d-none d-md-inline-block col-xs-4 col-sm-4 col-md-2 col-lg-2" href="home.html">Inicio</a>
-        <a class="py-2 d-none d-md-inline-block col-xs-4 col-sm-4 col-md-2 col-lg-2" href="categories.html">Categorías</a>
-        <a class="py-2 d-none d-md-inline-block col-xs-4 col-sm-4 col-md-2 col-lg-2" href="products.html">Productos</a>
-        <a class="py-2 d-none d-md-inline-block col-xs-4 col-sm-4 col-md-2 col-lg-2" href="sell.html">Vender</a>
-        <a class="py-2 d-none d-md-inline-block col-xs-4 col-sm-4 col-md-2 col-lg-2" href="cart.html">Mi carrito</a>
-      </div>
-    </nav>
+    <nav id="nav-bar" class="navbar navbar-expand-lg navbar-light bg-light site-header sticky-top py-1 bg-dark"></nav>
   </header>
   <main role="main" class="pb-5">
     <div class="text-center p-4">
